tests/fixtures/valid/expressions/switch_expression.pine
//@version=6
indicator("Switch")
x = switch
    close > open => 1
    close < open => -1
    => 0
plot(x)
