tests/fixtures/invalid/semantic/method_unknown_receiver.pine
//@version=6
indicator("x")
method bad(Unknown p) =>
    1
plot(close)
